--- a/status.html
+++ b/status.html
@@ -38,29 +38,21 @@
     </form>
   </div>
 
-    <section class="notice-section">
-  <div class="notice-card card">
+   <section class="notice-section" style="display: flex; gap: 20px; align-items: flex-start;">
+  <!-- Left card -->
+  <div class="notice-card card" style="flex: 1; text-align: left;">
     <h3>📢 Important Notice</h3>
     <p class="muted">
-      Please ensure all order details are entered correctly before confirmation. 
-      Double-check your address, contact number, and product selection to avoid delays. 
-      Orders once confirmed may be subject to our return and pre-order policies outlined below.
+      Please ensure all order details are entered correctly before confirmation. <br><br>
+      Double-check your <b>address</b>, <b>contact number</b>, and <b>product selection</b> to avoid delays. <br><br>
+      Orders once confirmed are subject to our Return and Pre-Order Policies.
     </p>
   </div>
 
-  <div class="notice-card card">
-    <h3>💬 Support</h3>
-    <p class="muted">
-      For assistance, please reach out via:<br>
-      ▪ Facebook: <a href="https://www.facebook.com/kawsara.tonmoy/" target="_blank">The Geek Shop</a><br>
-      ▪ Instagram: <a href="https://www.instagram.com/kawsara.tonmoy/" target="_blank">@thegeekshop</a><br>
-      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">+880 1960-788862</a>
-    </p>
-  </div>
-
-  <div class="notice-card card" style="flex: 2; text-align: left; overflow-y: auto; max-height: 500px;">
+  <!-- Middle full-length policy card -->
+  <div class="notice-card card" style="flex: 2; text-align: left;">
     <h3>📦 Shipping & 🔄 Return Policy</h3>
-    <div style="line-height: 1.6; font-family: Arial, sans-serif;">
+    <div style="line-height: 1.6; font-family: Arial, sans-serif; white-space: pre-wrap;">
       <h4>1. Order Processing & Dispatch</h4>
       <ul>
         <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
@@ -69,7 +61,7 @@
 
       <h4>2. Delivery Timeline</h4>
       <ul>
-        <li>Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.</li>
+        <li>Estimated delivery time is <b>3–7 business days</b>, depending on location and courier efficiency.</li>
         <li>Customers will be notified with tracking details once the order has been dispatched.</li>
       </ul>
 
@@ -80,7 +72,7 @@
       <p><b>Important Note:</b></p>
       <ul>
         <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
-        <li>Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</li>
+        <li>Customers are strongly advised to <b>verify the product at delivery</b> in the presence of the courier.</li>
       </ul>
 
       <hr>
@@ -89,30 +81,42 @@
       <h5>Eligibility Window</h5>
       <ul>
         <li>Items can be returned within <b>7 days of purchase</b>.</li>
-        <li>The 7-day period will be counted from the <b>date of delivery</b>.</li>
+        <li>The 7-day period is counted from the <b>date of delivery</b>.</li>
       </ul>
 
       <h5>Condition of Returned Items</h5>
       <ul>
-        <li>Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.</li>
+        <li>Products must be in <b>original condition</b>, unused, with all packaging and accessories intact.</li>
         <li>Items not meeting these conditions may be declined for return.</li>
       </ul>
 
       <h5>Valid Reasons for Return</h5>
       <ul>
-        <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</li>
-        <li><b>Defective on Arrival</b> – Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</li>
-        <li><b>Pre-Ordered Products</b> – Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</li>
+        <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made for reasons like “didn’t like the product” or “changed my mind”.</li>
+        <li><b>Defective on Arrival</b> – Products can only be returned if <b>defective or damaged on delivery</b>.</li>
+        <li><b>Pre-Orders</b> – Confirmed pre-orders <b>cannot be returned</b>, unless defective on arrival.</li>
       </ul>
 
       <h5>Exclusions</h5>
       <ul>
-        <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).</li>
-        <li>Hygiene-sensitive or custom-made products (if applicable) are <b>non-returnable</b>.</li>
+        <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except defective on arrival).</li>
+        <li>Custom-made or hygiene-sensitive products (if applicable) are <b>non-returnable</b>.</li>
       </ul>
     </div>
   </div>
+
+  <!-- Right card -->
+  <div class="notice-card card" style="flex: 1; text-align: left;">
+    <h3>💬 Support</h3>
+    <p class="muted">
+      For assistance, please reach us via:<br><br>
+      ▪ Facebook: <a href="https://www.facebook.com/thegeek.shop0/" target="_blank">The Geek Shop</a><br>
+      ▪ Instagram: <a href="https://www.instagram.com/thegeek.shop0/" target="_blank">@thegeekshop</a><br>
+      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">WhatsApp</a>
+    </p>
+  </div>
 </section>
+
 
   </div>
 
@@ -137,6 +141,7 @@
 </body>
 
 </html>
+
 
 
 
